# django-toasts

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
