[tool.poetry]
name = "django-toasts"
version = "0.1.0"
description = "toast notification framework for django"
authors = ["Martin Milon <malmiteria@gmail.com>", "Laurent Andriamifidy <lolrenx@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
